--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,28 @@
 /build/CMakeFiles/robot_dynamics.dir/src/model_pinocchio/kinova3.cpp.o
 /build/CMakeFiles/robot_dynamics.dir/src/model_pinocchio/pinocchio_interface.cpp.o
 /build/librobot_dynamics.so
+/urdf2model/robot_descriptions/kortex_description/CMakeLists.txt
+/urdf2model/robot_descriptions/kortex_description/config/joint_names_JACO3_URDF_V10.yaml
+/urdf2model/robot_descriptions/kortex_description/launch/display.launch
+/urdf2model/robot_descriptions/kortex_description/launch/gazebo.launch
+/urdf2model/robot_descriptions/kortex_description/meshes/Bracelet_Link.STL
+/urdf2model/robot_descriptions/kortex_description/meshes/Bracelet_Link.dae
+/urdf2model/robot_descriptions/kortex_description/meshes/EndEffector_Link.STL
+/urdf2model/robot_descriptions/kortex_description/meshes/EndEffector_Link.dae
+/urdf2model/robot_descriptions/kortex_description/meshes/ForeArm_Link.STL
+/urdf2model/robot_descriptions/kortex_description/meshes/ForeArm_Link.dae
+/urdf2model/robot_descriptions/kortex_description/meshes/HalfArm1_Link.STL
+/urdf2model/robot_descriptions/kortex_description/meshes/HalfArm1_Link.dae
+/urdf2model/robot_descriptions/kortex_description/meshes/HalfArm2_Link.STL
+/urdf2model/robot_descriptions/kortex_description/meshes/HalfArm2_Link.dae
+/urdf2model/robot_descriptions/kortex_description/meshes/Shoulder_Link.STL
+/urdf2model/robot_descriptions/kortex_description/meshes/Shoulder_Link.dae
+/urdf2model/robot_descriptions/kortex_description/meshes/Wrist1_Link.STL
+/urdf2model/robot_descriptions/kortex_description/meshes/Wrist1_Link.dae
+/urdf2model/robot_descriptions/kortex_description/meshes/Wrist2_Link.STL
+/urdf2model/robot_descriptions/kortex_description/meshes/Wrist2_Link.dae
+/urdf2model/robot_descriptions/kortex_description/meshes/base_link.STL
+/urdf2model/robot_descriptions/kortex_description/meshes/base_link.dae
+/urdf2model/robot_descriptions/kortex_description/meshes/convert.sh
+/urdf2model/robot_descriptions/kortex_description/package.xml
+/urdf2model/robot_descriptions/kortex_description/readme.md
