--- a/.gitignore
+++ b/.gitignore
@@ -1,56 +1,2 @@
-/build/CMakeCache.txt
-/build/CMakeFiles/3.5.1/CMakeCCompiler.cmake
-/build/CMakeFiles/3.5.1/CMakeCXXCompiler.cmake
-/build/CMakeFiles/3.5.1/CMakeDetermineCompilerABI_C.bin
-/build/CMakeFiles/3.5.1/CMakeDetermineCompilerABI_CXX.bin
-/build/CMakeFiles/3.5.1/CMakeSystem.cmake
-/build/CMakeFiles/3.5.1/CompilerIdC/CMakeCCompilerId.c
-/build/CMakeFiles/3.5.1/CompilerIdC/a.out
-/build/CMakeFiles/3.5.1/CompilerIdCXX/CMakeCXXCompilerId.cpp
-/build/CMakeFiles/3.5.1/CompilerIdCXX/a.out
-/build/CMakeFiles/CMakeDirectoryInformation.cmake
-/build/CMakeFiles/CMakeOutput.log
-/build/CMakeFiles/Makefile.cmake
-/build/CMakeFiles/Makefile2
-/build/CMakeFiles/TargetDirectories.txt
-/build/CMakeFiles/cmake.check_cache
-/build/CMakeFiles/feature_tests.bin
-/build/CMakeFiles/feature_tests.c
-/build/CMakeFiles/feature_tests.cxx
-/build/CMakeFiles/kinova3_dynamics.dir/CXX.includecache
-/build/CMakeFiles/kinova3_dynamics.dir/DependInfo.cmake
-/build/CMakeFiles/kinova3_dynamics.dir/build.make
-/build/CMakeFiles/kinova3_dynamics.dir/cmake_clean.cmake
-/build/CMakeFiles/kinova3_dynamics.dir/depend.internal
-/build/CMakeFiles/kinova3_dynamics.dir/depend.make
-/build/CMakeFiles/kinova3_dynamics.dir/flags.make
-/build/CMakeFiles/kinova3_dynamics.dir/link.txt
-/build/CMakeFiles/kinova3_dynamics.dir/progress.make
-/build/CMakeFiles/kinova3_dynamics.dir/src/kinova_pinocchio/kinova3.cpp.o
-/build/CMakeFiles/progress.marks
-/build/CMakeFiles/urdf2model_casadi.dir/CXX.includecache
-/build/CMakeFiles/urdf2model_casadi.dir/DependInfo.cmake
-/build/CMakeFiles/urdf2model_casadi.dir/build.make
-/build/CMakeFiles/urdf2model_casadi.dir/cmake_clean.cmake
-/build/CMakeFiles/urdf2model_casadi.dir/depend.internal
-/build/CMakeFiles/urdf2model_casadi.dir/depend.make
-/build/CMakeFiles/urdf2model_casadi.dir/flags.make
-/build/CMakeFiles/urdf2model_casadi.dir/link.txt
-/build/CMakeFiles/urdf2model_casadi.dir/progress.make
-/build/CMakeFiles/urdf2model_casadi.dir/src/urdf_to_casadi.cpp.o
-/build/Makefile
-/build/cmake_install.cmake
-/build/urdf2model_casadi
-/build/CMakeFiles/kinova3_dynamics.dir/src/model_pinocchio/kinova3.cpp.o
-/build/CMakeFiles/robot_dynamics.dir/CXX.includecache
-/build/CMakeFiles/robot_dynamics.dir/DependInfo.cmake
-/build/CMakeFiles/robot_dynamics.dir/build.make
-/build/CMakeFiles/robot_dynamics.dir/cmake_clean.cmake
-/build/CMakeFiles/robot_dynamics.dir/depend.internal
-/build/CMakeFiles/robot_dynamics.dir/depend.make
-/build/CMakeFiles/robot_dynamics.dir/flags.make
-/build/CMakeFiles/robot_dynamics.dir/link.txt
-/build/CMakeFiles/robot_dynamics.dir/progress.make
-/build/CMakeFiles/robot_dynamics.dir/src/model_pinocchio/kinova3.cpp.o
-/build/CMakeFiles/robot_dynamics.dir/src/model_pinocchio/pinocchio_interface.cpp.o
-/build/librobot_dynamics.so
+/build/*
+!/build/configure.sh
