--- a/urdf2model/tests/CMakeLists.txt
+++ b/urdf2model/tests/CMakeLists.txt
@@ -23,6 +23,19 @@ target_link_libraries (Basic_tests
 add_executable (Interface_tests interface.cpp)
 target_link_libraries (Interface_tests
 
+                      model_interface
+                      ${CASADI_LIB}
+                      stdc++
+                      boost_system
+                      urdfdom_model
+                      ${Boost_FILESYSTEM_LIBRARY}
+                      ${Boost_SYSTEM_LIBRARY}
+                      ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
+                      )
+
+add_executable (Old_interface_tests old_interface.cpp)
+target_link_libraries (Old_interface_tests
+
                       ${CASADI_LIB}
                       stdc++
                       boost_system
@@ -34,3 +47,4 @@ target_link_libraries (Interface_tests
 
 add_test (NAME Basic_Test COMMAND Basic_tests)
 add_test (NAME Interface_Test COMMAND Interface_tests)
+add_test (NAME Old_Interface_Test COMMAND Old_interface_tests)
