--- a/urdf2model/CMakeLists.txt
+++ b/urdf2model/CMakeLists.txt
@@ -6,8 +6,9 @@
 # options
   option(DEBUG_MODE "Build unit tests" OFF)
   option(BUILD_UNIT_TESTS "Build unit tests" OFF)
+  option(BUILD_EXAMPLES "Build examples" ON)
 
-# Set the GCC flags
+# Set GCC flags
   if(DEBUG_MODE)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -w -fPIC -std=c++11 -DPINOCCHIO_URDFDOM_TYPEDEF_SHARED_PTR -DPINOCCHIO_WITH_URDFDOM -DDEBUG")
   else()
@@ -23,7 +24,9 @@
 # Add subdirectories
   add_subdirectory (src)
 
-  add_subdirectory (examples)
+  if(BUILD_EXAMPLES)
+    add_subdirectory (examples)
+  endif(BUILD_EXAMPLES)
 
   if(BUILD_UNIT_TESTS)
     enable_testing ()
