first try - make install (failed)

--- a/urdf2model/src/CMakeLists.txt
+++ b/urdf2model/src/CMakeLists.txt
@@ -1,5 +1,14 @@
 
 
+SET(${PROJECT_NAME}_SOURCES)
+LIST(APPEND ${PROJECT_NAME}_SOURCES
+
+    ${ROB_DYN_INTERFACE_DIR}/pinocchio_interface.cpp
+    ${SRC_DIR}/functions/forward_dynamics.cpp
+    ${SRC_DIR}/functions/inverse_dynamics.cpp
+    ${SRC_DIR}/functions/forward_kinematics.cpp
+    ${SRC_DIR}/functions/code_generation.cpp
+    )
 
 # link directories (as the -L flag in gcc)
 find_library(CASADI_LIB casadi HINTS ${CASADI_DIR}/lib)
@@ -12,17 +21,10 @@ include_directories(${EIGEN_INC})
 include_directories(${CASADI_DIR}/include)
 
 # link external libraries (as the -l flag in gcc)
-add_library(  model_interface
-              SHARED
-              ${ROB_DYN_INTERFACE_DIR}/pinocchio_interface.cpp
-              ${SRC_DIR}/functions/forward_dynamics.cpp
-              ${SRC_DIR}/functions/inverse_dynamics.cpp
-              ${SRC_DIR}/functions/forward_kinematics.cpp
-              ${SRC_DIR}/functions/code_generation.cpp
-           )
-
+ADD_LIBRARY(${PROJECT_NAME} SHARED ${HEADERS} ${${PROJECT_NAME}_SOURCES})
+SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)
 # target link libraries
-target_link_libraries(model_interface
+target_link_libraries(${PROJECT_NAME}
 
                       stdc++
                       boost_system
@@ -30,3 +32,11 @@ target_link_libraries(model_interface
                       ${CASADI_LIB}
                       # casadi
                     )
+
+# Install
+# ADD_HEADER_GROUP(HEADERS)
+# ADD_SOURCE_GROUP(${PROJECT_NAME}_SOURCES)
+INSTALL(TARGETS ${PROJECT_NAME} DESTINATION lib)
+
+# MESSAGE( STATUS "HEADERS is: " ${HEADERS} )
+# MESSAGE( STATUS "{{PROJECT_NAME}_SOURCES} is: " ${${PROJECT_NAME}_SOURCES} )
