able to make install and run ext.example - modified folder organization

--- a/urdf2model/examples/CMakeLists.txt
+++ b/urdf2model/examples/CMakeLists.txt
@@ -7,6 +7,8 @@ include_directories(${PINOCCHIO_INC})
 include_directories(${EIGEN_INC})
 include_directories(${CASADI_DIR}/include)
 
+include_directories(${SRC_DIR})
+
 # Adds an executable target to be built from the source files listed after it
 add_executable( basic_example
                 basic_example.cpp
@@ -14,4 +16,5 @@ add_executable( basic_example
 target_link_libraries( basic_example
 
                        ${PROJECT_NAME}
+                       ${CASADI_LIB}
                      )
