renamed pinocchio_interface to model_interface

--- a/urdf2model/src/CMakeLists.txt
+++ b/urdf2model/src/CMakeLists.txt
@@ -3,14 +3,12 @@
 SET(${PROJECT_NAME}_SOURCES)
 LIST(APPEND ${PROJECT_NAME}_SOURCES
 
-    ${SRC_DIR}/pinocchio_interface.cpp
+    ${SRC_DIR}/model_interface.cpp
     ${SRC_DIR}/functions/forward_dynamics.cpp
     ${SRC_DIR}/functions/inverse_dynamics.cpp
     ${SRC_DIR}/functions/forward_kinematics.cpp
     ${SRC_DIR}/functions/code_generation.cpp
     )
-
-
 
 # include directories (as the -I flag in gcc)
 include_directories(${PINOCCHIO_INC})
