--- a/urdf2model/examples/CMakeLists.txt
+++ b/urdf2model/examples/CMakeLists.txt
@@ -19,15 +19,15 @@ target_link_libraries( basic_example
                        ${PROJECT_NAME}
                        ${CASADI_LIB}
                      )
-# Complete example
-add_executable( complete_example
-               complete_example.cpp
-             )
-target_link_libraries( complete_example
-
-                      ${PROJECT_NAME}
-                      ${CASADI_LIB}
-                    )
+# # Complete example
+# add_executable( complete_example
+#                complete_example.cpp
+#              )
+# target_link_libraries( complete_example
+#
+#                       ${PROJECT_NAME}
+#                       ${CASADI_LIB}
+#                     )
 
 # Kinova example
 add_executable( kinova_example
@@ -48,22 +48,22 @@ target_link_libraries( kinova_2dof_example
                       ${CASADI_LIB}
                     )
 
-# UR10 example
-add_executable( ur10_example
-               ur10_example.cpp
-             )
-target_link_libraries( ur10_example
-
-                      ${PROJECT_NAME}
-                      ${CASADI_LIB}
-                    )
-
-# Yumi example
-add_executable( yumi_example
-               yumi_example.cpp
-             )
-target_link_libraries( yumi_example
-
-                      ${PROJECT_NAME}
-                      ${CASADI_LIB}
-                    )
+# # UR10 example
+# add_executable( ur10_example
+#                ur10_example.cpp
+#              )
+# target_link_libraries( ur10_example
+#
+#                       ${PROJECT_NAME}
+#                       ${CASADI_LIB}
+#                     )
+#
+# # Yumi example
+# add_executable( yumi_example
+#                yumi_example.cpp
+#              )
+# target_link_libraries( yumi_example
+#
+#                       ${PROJECT_NAME}
+#                       ${CASADI_LIB}
+#                     )
