added robot_expressions function

--- a/urdf2model/src/CMakeLists.txt
+++ b/urdf2model/src/CMakeLists.txt
@@ -8,6 +8,7 @@ LIST(APPEND ${PROJECT_NAME}_SOURCES
     ${SRC_DIR}/functions/inverse_dynamics.cpp
     ${SRC_DIR}/functions/forward_kinematics.cpp
     ${SRC_DIR}/functions/code_generation.cpp
+    ${SRC_DIR}/functions/robot_expressions.cpp
     )
 
 # include directories (as the -I flag in gcc)
