--- a/urdf2model/tests/CMakeLists.txt
+++ b/urdf2model/tests/CMakeLists.txt
@@ -11,7 +11,6 @@ include_directories (${ROB_DYN_INTERFACE_DIR}
 
 add_definitions (-DBOOST_TEST_DYN_LINK)
 
-
 # add_executable (Basic_tests basictests.cpp)
 # target_link_libraries (Basic_tests
 #                        # ${CASADI_LIB}
@@ -20,6 +19,8 @@ add_definitions (-DBOOST_TEST_DYN_LINK)
 #                        ${Boost_SYSTEM_LIBRARY}
 #                        ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
 #                        )
+
+# ------------------------------------------------------------------------------
 
 add_executable (Interface_tests interface.cpp)
 target_link_libraries (Interface_tests
@@ -36,6 +37,60 @@ target_link_libraries (Interface_tests
                       )
 target_compile_definitions(Interface_tests PRIVATE MODELS_DIR=${CMAKE_SOURCE_DIR}/models) # can also be set like: add_definitions (-DMODELS_DIR=${CMAKE_SOURCE_DIR}/models) for all executables at once
 
+# ------------------------------------------------------------------------------
+
+add_executable (RNEA_tests invdyn_tests.cpp)
+target_link_libraries (RNEA_tests
+
+                      ${PROJECT_NAME}
+                      ${CASADI_LIB}
+                      stdc++
+                      boost_system
+                      urdfdom_model
+                      ${Boost_FILESYSTEM_LIBRARY}
+                      ${Boost_SYSTEM_LIBRARY}
+                      ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
+                      pinocchio::pinocchio
+                      )
+target_compile_definitions(RNEA_tests PRIVATE MODELS_DIR=${CMAKE_SOURCE_DIR}/models) # can also be set like: add_definitions (-DMODELS_DIR=${CMAKE_SOURCE_DIR}/models) for all executables at once
+
+# ------------------------------------------------------------------------------
+
+add_executable (ABA_tests fwddyn_tests.cpp)
+target_link_libraries (ABA_tests
+
+                      ${PROJECT_NAME}
+                      ${CASADI_LIB}
+                      stdc++
+                      boost_system
+                      urdfdom_model
+                      ${Boost_FILESYSTEM_LIBRARY}
+                      ${Boost_SYSTEM_LIBRARY}
+                      ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
+                      pinocchio::pinocchio
+                      )
+target_compile_definitions(ABA_tests PRIVATE MODELS_DIR=${CMAKE_SOURCE_DIR}/models) # can also be set like: add_definitions (-DMODELS_DIR=${CMAKE_SOURCE_DIR}/models) for all executables at once
+
+# ------------------------------------------------------------------------------
+
+add_executable (FWDKIN_tests fwdkin_tests.cpp)
+target_link_libraries (FWDKIN_tests
+
+                      ${PROJECT_NAME}
+                      ${CASADI_LIB}
+                      stdc++
+                      boost_system
+                      urdfdom_model
+                      ${Boost_FILESYSTEM_LIBRARY}
+                      ${Boost_SYSTEM_LIBRARY}
+                      ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
+                      pinocchio::pinocchio
+                      )
+target_compile_definitions(FWDKIN_tests PRIVATE MODELS_DIR=${CMAKE_SOURCE_DIR}/models) # can also be set like: add_definitions (-DMODELS_DIR=${CMAKE_SOURCE_DIR}/models) for all executables at once
+
+# ------------------------------------------------------------------------------
+
+# -------------------------------------------------------------------------------------------------------------------
 add_executable (Old_interface_tests old_interface.cpp)
 target_link_libraries (Old_interface_tests
 
@@ -51,4 +106,8 @@ target_link_libraries (Old_interface_tests
 
 # add_test (NAME Basic_Test COMMAND Basic_tests)
 add_test (NAME Interface_Test COMMAND Interface_tests)
+add_test (NAME RNEA_Test COMMAND RNEA_tests)
+add_test (NAME ABA_Test COMMAND ABA_tests)
+add_test (NAME FWDKIN_Test COMMAND FWDKIN_tests)
+
 add_test (NAME Old_Interface_Test COMMAND Old_interface_tests)
